fix: remove horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *,
 *::after,
 *::before {
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
   
 ul,
@@ -96,7 +96,7 @@ main {
 }
 
 .main {
-    height: 100vh;
+    height: 97vh;
     margin-bottom: 60px;
     display: flex;
     justify-content: space-around;
@@ -175,7 +175,7 @@ main {
 
 .info__personal,
 .info__expertise {
-    width: 20%;
+    width: 30%;
     height: auto;
     padding: 40px 60px;
     background-color: #F7F7F7;
@@ -196,7 +196,7 @@ main {
 }
 
 .info__about {
-    width: 20%;
+    width: 30%;
     height: auto;
     padding: 40px 60px;
     background-color: #E2E2E2; 
@@ -233,7 +233,7 @@ main {
 .education,
 .languages {
     margin-bottom: 30px;
-    width: 300px;
+    width: 400px;
     height: auto;
     padding: 23px 40px 40px;
     background-color: #FFFFFF; 
